# acton-htmx

./: CLAUDE.md  Cargo.toml
acton/: Cargo.toml
acton-dx/: Cargo.toml
acton-dx/examples/: forms_demo.rs  simple_htmx.html
acton-dx/examples/email_templates/: password_changed.html  password_reset.txt
acton-dx/src/: lib.rs
acton-dx/src/cli/: mod.rs
acton-dx/src/cli/htmx/: mod.rs  static_templates.rs  template_manager.rs
acton-dx/src/cli/htmx/commands/: deploy.rs  dev.rs  generate.rs  new.rs  scaffold.rs  templates.rs
acton-dx/src/cli/htmx/scaffold/: helpers.rs  mod.rs
acton-dx/src/htmx/: mod.rs
acton-dx/src/htmx/agents/: mod.rs  request_reply.rs
acton-dx/src/htmx/auth/: extractors.rs  handlers.rs  mod.rs  session.rs  user.rs
acton-dx/src/htmx/config/: mod.rs
acton-dx/src/htmx/email/: job.rs  mod.rs
acton-dx/src/htmx/email/backend/: aws_ses.rs  console.rs
acton-dx/src/htmx/extractors/: csrf.rs  session.rs
acton-dx/src/htmx/forms/: render.rs
acton-dx/src/htmx/handlers/: cedar_admin.rs  mod.rs
acton-dx/src/htmx/health/: mod.rs
acton-dx/src/htmx/jobs/: cancellation.rs  examples.rs  mod.rs  observability.rs  schedule.rs  status.rs
acton-dx/src/htmx/jobs/agent/: persistence.rs  queue.rs  redis_agent.rs
acton-dx/src/htmx/middleware/: auth.rs  cedar.rs  cedar_template.rs  file_serving.rs  helpers.rs  mod.rs  rate_limit.rs  security_headers.rs
acton-dx/src/htmx/oauth2/: http.rs  mod.rs  models.rs
acton-dx/src/htmx/oauth2/providers/: github.rs  google.rs  oidc.rs
acton-dx/src/htmx/observability/: metrics.rs
acton-dx/src/htmx/responses/: swap_oob.rs
acton-dx/src/htmx/state/: mod.rs
acton-dx/src/htmx/storage/: policy.rs  processing.rs  traits.rs  types.rs  validation.rs
acton-dx/src/htmx/template/: mod.rs
acton-dx/src/htmx/template/framework/: loader.rs  mod.rs
acton-dx/src/htmx/template/framework/defaults/errors/: 422.html
acton-dx/src/htmx/template/framework/defaults/forms/: csrf-input.html  input.html  submit-button.html
acton-dx/src/htmx/template/framework/defaults/htmx/: oob-wrapper.html
acton-dx/src/htmx/template/framework/defaults/validation/: validation-summary.html
acton-dx/src/htmx/template/manager/: mod.rs  xdg.rs
acton-dx/src/htmx/testing/: agents.rs  database.rs  email.rs
acton-dx/templates/examples/oauth/: README.md  account-settings.html
acton-dx/templates/oauth2/: account_settings.html  login_buttons.html
acton-dx/templates/partials/: errors.html  flash.html
acton-dx/tests/: oauth2_integration.rs
acton-htmx/: Cargo.toml
acton-htmx-cli/: Cargo.toml
acton-htmx-cli/src/: lib.rs  main.rs
acton-htmx-cli/src/commands/: db.rs  dev.rs  generate.rs  jobs.rs  mod.rs  new.rs  scaffold.rs
acton-htmx-cli/src/scaffold/: field_type.rs  generator.rs  helpers.rs  mod.rs  templates.rs
acton-htmx-cli/src/templates/: files.rs  jobs.rs  mod.rs
acton-htmx-cli/tests/: template_generation.rs
acton-htmx-macros/: Cargo.toml
acton-htmx/examples/: basic_server.rs  htmx_patterns.rs  htmx_templates.rs  simple_htmx.rs
acton-htmx/src/: lib.rs
acton-htmx/src/auth/: extractors.rs  handlers.rs
acton-htmx/src/config/: mod.rs
acton-htmx/src/email/: sender.rs
acton-htmx/src/error/: mod.rs
acton-htmx/src/extractors/: mod.rs  validated.rs
acton-htmx/src/forms/: builder.rs  field.rs  mod.rs  render.rs
acton-htmx/src/handlers/: job_admin.rs
acton-htmx/src/htmx/: mod.rs
acton-htmx/src/jobs/: examples.rs  job.rs  mod.rs  testing.rs
acton-htmx/src/jobs/agent/: messages.rs  mod.rs  queue.rs
acton-htmx/src/middleware/: auth.rs  cedar.rs  file_serving.rs  helpers.rs  mod.rs  rate_limit.rs
acton-htmx/src/oauth2/: agent.rs  handlers.rs  models.rs  types.rs
acton-htmx/src/oauth2/providers/: base.rs  github.rs  google.rs  oidc.rs
acton-htmx/src/observability/: mod.rs
acton-htmx/src/state/: mod.rs
acton-htmx/src/storage/: mod.rs  scanning.rs  traits.rs
acton-htmx/src/template/: extractor.rs  helpers.rs  mod.rs  registry.rs
acton-htmx/src/testing/: assertions.rs  database.rs  mod.rs  server.rs
acton-htmx/templates/: base.html
acton-htmx/templates/components/: htmx_helpers.html
acton-htmx/tests/: htmx_extractors.rs  htmx_responders.rs  oauth2_integration.rs
acton/examples/: basic_server.rs  email_demo.rs  htmx_templates.rs  simple_htmx.rs
acton/examples/email_templates/: account_deletion.html  account_deletion.txt  email_verification.html  email_verification.txt  password_changed.txt  password_reset.html  welcome.html  welcome.txt
acton/src/: lib.rs
acton/src/cli/htmx/: project_template_manager.rs  template_manager.rs
acton/src/htmx/: mod.rs
acton/src/htmx/agents/: csrf_manager.rs  session_manager.rs
acton/src/htmx/auth/: handlers.rs  mod.rs  password.rs
acton/src/htmx/email/: builder.rs  error.rs  template.rs
acton/src/htmx/error/: mod.rs
acton/src/htmx/extractors/: file_upload.rs  mod.rs
acton/src/htmx/forms/: builder.rs  error.rs  mod.rs  template_render.rs
acton/src/htmx/handlers/: job_admin.rs  mod.rs  role_admin.rs
acton/src/htmx/jobs/: context.rs  error.rs  job.rs
acton/src/htmx/jobs/agent/: mod.rs  (+3 more)
acton/src/htmx/middleware/: csrf.rs  session.rs
acton/src/htmx/oauth2/: handlers.rs  types.rs
acton/src/htmx/observability/: mod.rs
acton/src/htmx/responses/: mod.rs
acton/src/htmx/state/: mod.rs
acton/src/htmx/storage/: local.rs  mod.rs  scanning.rs
acton/src/htmx/template/: extractor.rs  helpers.rs
acton/src/htmx/testing/: jobs.rs  mod.rs  server.rs
acton/templates/components/: forms.html
acton/templates/examples/oauth/: login.html
acton/templates/layouts/: app.html
acton/tests/: htmx_extractors.rs  htmx_responders.rs
docs/guides/: 07-oauth2-authentication.md
templates/grafana/: acton-htmx-dashboard.json
templates/project/: README.md  manifest.toml
templates/project/common/templates/: home.html.hbs
templates/project/postgres/: Cargo.toml.hbs  README.md.hbs
templates/project/sqlite/: Cargo.toml.hbs  README.md.hbs
templates/prometheus/: alerts.yml
templates/scaffold/: README.md  form.rs.hbs  handler.rs.hbs  model.rs.hbs  test.rs.hbs
(+42 files in other folders)
