[workspace]
members = [
    "acton-htmx",
    "acton-htmx-cli",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"
warnings = "deny"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Allow during alpha development
cargo_common_metadata = "allow"
multiple_crate_versions = { level = "allow", priority = 1 }
doc_markdown = "allow"
module_name_repetitions = "allow"

[workspace.package]
version = "1.1.0-beta.3"
edition = "2021"
rust-version = "1.83.0"
authors = ["Acton Contributors"]
license = "MIT"
repository = "https://github.com/GovCraft/acton-htmx"
homepage = "https://acton-htmx.dev"
keywords = ["web", "framework", "htmx", "axum", "hypermedia"]
categories = ["web-programming::http-server"]

[workspace.dependencies]
# From acton-service - Core web framework
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["compression-full", "cors", "trace", "timeout", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "chrono", "uuid", "json"] }
redis = "0.32"
deadpool-redis = "0.22"
figment = { version = "0.10", features = ["toml", "env", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"] }
tower-resilience = "0.3"
jsonwebtoken = "10"
governor = "0.10.2"

# From acton-reactive - Actor runtime
acton-reactive = "5"
tokio = { version = "1", features = ["full"] }

# HTMX-specific - Template engine and integration
axum-htmx = { version = "0.8", features = ["auto-vary", "guards", "serde"] }
askama = "0.14"
validator = { version = "0.20", features = ["derive"] }

# Security & crypto
argon2 = "0.5"
rand = "0.9"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# Error handling
thiserror = "2"
anyhow = "1"

# Async runtime
async-trait = "0.1"

# HTTP
http = "1"
http-body-util = "0.1"
hyper = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# Utilities
once_cell = "1"
parking_lot = "0.12"

# Testing
proptest = "1"

# Procedural macros
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

# CLI
clap = { version = "4", features = ["derive", "cargo"] }
console = "0.16"
indicatif = "0.18"
dialoguer = "0.12"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.test]
opt-level = 1
