[package]
name = "acton-htmx-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage = "https://acton-htmx.dev"
keywords = ["web", "framework", "htmx", "macros"]
categories = ["web-programming::http-server"]
description = "Procedural macros for acton-htmx"
readme = "../README.md"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
proc-macro2.workspace = true
