[package]
name = "acton-htmx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Opinionated Rust web framework for HTMX applications"
readme = "../README.md"

[lints]
workspace = true

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tower.workspace = true
tower-http.workspace = true
sqlx.workspace = true
redis = { workspace = true, optional = true }
deadpool-redis = { workspace = true, optional = true }
figment.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
tower-resilience.workspace = true
governor.workspace = true
acton-reactive.workspace = true
tokio.workspace = true
axum-htmx.workspace = true
askama.workspace = true
validator = { workspace = true, features = ["derive"] }
argon2.workspace = true
rand.workspace = true
sha2.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
http.workspace = true
hyper.workspace = true
chrono.workspace = true
once_cell.workspace = true
parking_lot.workspace = true

# Crate-specific
acton-htmx-macros = { path = "../acton-htmx-macros" }
base64 = "0.22.1"
cron = "0.15.0"
multer = { version = "3.1.0", features = ["tokio-io"] }
bytes = "1.11.0"
mime = "0.3.17"
futures-util = "0.3.31"
infer = { version = "0.19.0", features = ["alloc"] }
image = { version = "0.25.6", features = ["jpeg", "png", "gif", "webp"] }
kamadak-exif = "0.6.1"
httpdate = "1.0.3"

[dev-dependencies]
proptest.workspace = true
tokio = { workspace = true, features = ["test-util"] }
anyhow.workspace = true
tempfile = "3.23.0"

[features]
default = ["postgres", "redis"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
redis = ["dep:redis", "dep:deadpool-redis"]
otel-metrics = ["dep:opentelemetry", "dep:opentelemetry-otlp"]

[lib]
name = "acton_htmx"
path = "src/lib.rs"
